fix(astro): explicitly import sanityClient

--- a/apps/astro/src/pages/shoes/[slug].astro
+++ b/apps/astro/src/pages/shoes/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import {sanityClient} from 'sanity:client'
 import {PortableText} from 'astro-portabletext'
 import {shoe, shoesList, type ShoeResult, type ShoesListResult} from 'apps-common/queries'
 import Layout from '../../../layouts/layout.astro'
