--- a/apps/astro/src/pages/shoes/index.astro
+++ b/apps/astro/src/pages/shoes/index.astro
@@ -1,4 +1,5 @@
 ---
+import {sanityClient} from 'sanity:client'
 import {shoesList, type ShoesListResult} from 'apps-common/queries'
 import {urlFor, urlForCrossDatasetReference} from '../../sanity'
 import {formatCurrency} from 'apps-common/utils'
