refactor(astro): move Layout into src/

--- a/apps/astro/src/pages/shoes/[slug].astro
+++ b/apps/astro/src/pages/shoes/[slug].astro
@@ -2,7 +2,7 @@
 import {sanityClient} from 'sanity:client'
 import {PortableText} from 'astro-portabletext'
 import {shoe, shoesList, type ShoeResult, type ShoesListResult} from 'apps-common/queries'
-import Layout from '../../../layouts/layout.astro'
+import Layout from '../../layouts/layout.astro'
 import {urlFor, urlForCrossDatasetReference} from '../../sanity'
 import {formatCurrency} from 'apps-common/utils'
 
