--- a/apps/astro/src/layouts/layout.astro
+++ b/apps/astro/src/layouts/layout.astro
@@ -1,4 +1,6 @@
 ---
+import VisualEditing from '../components/visual-editing.astro'
+
 export type props = {
   title: string
 }
@@ -15,5 +17,6 @@ const {title} = Astro.props
   </head>
   <body>
     <slot />
+    <VisualEditing />
   </body>
 </html>
