--- a/packages/visual-editing/astro/visual-editing.astro
+++ b/packages/visual-editing/astro/visual-editing.astro
@@ -1,11 +1,17 @@
 ---
-const visualEditingEnabled = import.meta.env.SANITY_VISUAL_EDITING_ENABLED
+import type { VisualEditingOptions } from '../dist'
+
+export interface Props extends Pick<VisualEditingOptions, 'zIndex'> {
+  enabled?: boolean
+}
+
+const {enabled, zIndex} = Astro.props
 ---
 
-<sanity-astro-visual-editing enabled={visualEditingEnabled}></sanity-astro-visual-editing>
+<sanity-astro-visual-editing enabled={enabled} data-z-index={zIndex}></sanity-astro-visual-editing>
 
 <script>
-  import {enableVisualEditing} from '@sanity/visual-editing'
+  import {enableVisualEditing} from '../dist/index'
 
   class SanityAstroVisualEditing extends HTMLElement {
     static observedAttributes = ['enabled']
@@ -28,6 +34,7 @@ const visualEditingEnabled = import.meta.env.SANITY_VISUAL_EDITING_ENABLED
     private updateVisualEditing(enabled: boolean) {
       if (enabled) {
         this.unsubscribe = enableVisualEditing({
+          zIndex: this.dataset.zIndex,
           refresh: () => {
             return new Promise((resolve) => {
               window.location.reload()
