--- a/apps/astro/src/layouts/layout.astro
+++ b/apps/astro/src/layouts/layout.astro
@@ -1,5 +1,6 @@
 ---
-import VisualEditing from '../components/visual-editing.astro'
+import {VisualEditing} from '@sanity/astro/visual-editing'
+const visualEditingEnabled = import.meta.env.SANITY_VISUAL_EDITING_ENABLED == 'true'
 
 export type props = {
   title: string
@@ -17,6 +18,6 @@ const {title} = Astro.props
   </head>
   <body>
     <slot />
-    <VisualEditing />
+    <VisualEditing enabled={visualEditingEnabled} />
   </body>
 </html>
